2011-04-18 Javier Lanz <javier.lanz@artica.es>

	* include/functions_filemanager.php: Added a 'base64_encode' to deal with
	html entities in collection's files

	Fix: #3286063

2011-04-18 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php, godmode/reporting/graph_builder.preview.php:
	fixes for the new graph engine.
	
	* operation/agentes/estado_monitores.php: added a toggle button to show the
	the entire value or sub string for value (by default).

2011-04-18 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php, include/graphs/functions_fsgraph.php,
	include/graphs/fgraph.php, operation/agentes/stat_win.php: fixed the
	relative urls for absolute urls.

2011-04-18 Javier Lanz <javier.lanz@artica.es>

	* include/functions_filemanager.php: Fixed a problem with html entities
	* include/get_file.php: Added base64_decode for getting a get parameter

	Fixes: #3286063

2011-04-18 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php, include/graphs/functions_pchart.php,
	include/graphs/fgraph.php, operation/agentes/estado_generalagente.php: some
	fixes and changes in the new graph engine.
	
	* operation/agentes/stat_win.php: fixed the tittle of popup window.

2011-04-18 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: changed to use new engine.

2011-04-18  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/functions_fsgraph.php
	include/graphs/fgraph.php: Fixed bar graphs margins
	Fixed horizontal flash bar

2011-04-18  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/fgraph.php: Clean code

2011-04-16  Junichi Satoh  <junichi@rworks.jp>

	* godmode/admin_access_logs.php: Fixed filter parameters are not
	taken over with offset selection.

2011-04-15 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php: added the parameter $homeurl in some