@@ -1,3 +1,9 @@
+2011-04-18 Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/graphs/pChart/pDraw.class.php: changed for show the some dark
+	border with same color of area when the data config of graph haven't this
+	values.
+
 2011-04-18 Javier Lanz <javier.lanz@artica.es>
 
 	* include/functions_filemanager.php: Added a 'base64_encode' to deal with
